↕️ Spacing issue with image-outline

--- a/css/_classes.scss
+++ b/css/_classes.scss
@@ -46,4 +46,6 @@
 
 .image-outline {
 	border: 1px solid $light-gray;
+	padding: 0;
+	margin: 6px 0;
 }
